<!--
  ~ strings.xml
  ~   Go4Lunch
  ~
  ~   Updated by paulleclerc on 6/18/20 12:31 PM.
  ~   Copyright © 2020 Paul Leclerc. All rights reserved.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_application_id" translatable="false">2642016929378782</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">
        fb2642016929378782
    </string>
    <string name="background_content_description">Background</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="go4lunch_logo_content_description">Go4Lunch logo</string>
    <string name="logo_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="permission_location_message">Go4Lunch needs your position to purpose you nice restaurants next to
        you!
    </string>
    <string name="bottom_navigation_menu_map_view">Map View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="restaurant_picture">Restaurant picture</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_has_not_decided">%1$s hasn\'t decided yet</string>
    <string name="workmate_serializable_key" translatable="false">workmate</string>
    <string name="restaurant_opened">Opened</string>
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_rate_3">Restaurant rate 3/3</string>
    <string name="restaurant_rate_2">Restaurant rate 2/3</string>
    <string name="restaurant_rate_1" tools:ignore="TypographyFractions">Restaurant rate 1/3</string>
    <string name="workmates_picture">Workmates picture</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="call_image">Call image</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="like_restaurant">like restaurant</string>
    <string name="website_picture">website picture</string>
    <string name="workmate_is_joining">%1$s is joining!</string>
    <string name="me">Me</string>
    <string name="chat_message_placeholder">Your message…</string>
    <string name="send_picture">Send picture</string>
    <string name="menu_your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="your_avatar">Your avatar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="username">Username</string>
    <string name="tap_to_modify">Tap to modify</string>
    <string name="user">User</string>
    <string name="notifications">Notifications</string>
    <string name="allow_chat_notifications">Allow chat notifications</string>
    <string name="allow_daily_noon_notification">Allow daily noon notification</string>
    <string name="permission_storage_message">Go4Lunch needs access to your storage.</string>
    <string name="search">Search</string>
    <string name="impossible_operation">An error occurred whil performing this operation, retry later !</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="default_notification_channel_id" translatable="false">5ee8bce0326ca</string>
    <string name="user_has_decided">%1$s lunch at %2$s!</string>
</resources>
