<?xml version="1.0" encoding="utf-8"?><!--
  ~ activity_main_drawer.xml
  ~   Go4Lunch
  ~
  ~   Updated by paulleclerc on 6/5/20 9:49 AM.
  ~   Copyright © 2020 Paul Leclerc. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/lateral_menu_lunch"
            android:icon="@drawable/cutlery"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/lateral_menu_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/lateral_menu_log_out"
            android:icon="@drawable/power_settings"
            android:title="@string/logout" />
    </group>
</menu>