<?xml version="1.0" encoding="utf-8"?><!--
  ~ main_bottom_navigation.xml
  ~   Go4Lunch
  ~
  ~   Created by paulleclerc on 5/27/20 5:13 PM.
  ~   Copyright © 2020 Paul Leclerc. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/main_bottom_navigation_map"
            android:enabled="true"
            android:icon="@drawable/map"
            android:title="@string/bottom_navigation_menu_map_view"/>

    <item
            android:id="@+id/main_bottom_navigation_list"
            android:enabled="true"
            android:icon="@drawable/list"
            android:title="@string/bottom_navigation_menu_list_view"/>

    <item
            android:id="@+id/main_bottom_navigation_workmates"
            android:enabled="true"
            android:icon="@drawable/workmates"
            android:title="@string/bottom_navigation_menu_workmates"/>
</menu>