<?xml version="1.0" encoding="utf-8"?><!--
  ~ activity_restaurant_detail.xml
  ~   Go4Lunch
  ~
  ~   Created by paulleclerc on 5/27/20 5:13 PM.
  ~   Copyright © 2020 Paul Leclerc. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.restaurant_detail.RestaurantDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="#FFFFFF" android:id="@+id/app_bar"
            app:layout_constraintDimensionRatio="1.66">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:layout_width="match_parent"
                                                                    android:layout_height="match_parent"
                                                                    android:background="@color/colorPrimary">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:srcCompat="@drawable/background"
                    android:id="@+id/restaurant_detail_background" android:scaleType="centerCrop"
                    android:contentDescription="@string/restaurant_image"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:focusable="true"
            app:srcCompat="@drawable/add_circle"
            android:id="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/app_bar"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintBottom_toBottomOf="@+id/app_bar"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@color/dark_white" android:tint="@color/colorPrimary"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorPrimary" android:id="@+id/constraintLayout2">

        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/restaurant_detail_title" app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/dark_white" android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4" android:layout_margin="8dp"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/star" android:id="@+id/imageView4"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="@+id/restaurant_detail_title"
                app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_title"
                app:layout_constraintStart_toEndOf="@+id/restaurant_detail_title" android:layout_marginStart="4dp"
                android:contentDescription="@string/restaurant_rate_1"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/star" android:id="@+id/imageView5"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="@+id/restaurant_detail_title"
                app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_title"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/imageView4"
                android:layout_marginStart="4dp" android:contentDescription="@string/restaurant_rate_2"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/star" android:id="@+id/imageView6"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="@+id/restaurant_detail_title"
                app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_title"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView5" android:layout_marginStart="4dp"
                android:contentDescription="@string/restaurant_rate_3"/>
        <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/restaurant_detail_address"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_title"
                android:textColor="@color/dark_white"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp" app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout" android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" android:padding="8dp"
                android:id="@+id/call_layout">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp" app:srcCompat="@drawable/call" android:id="@+id/restaurant_detail_call_image"
                    android:tint="@color/gray_out" android:layout_weight="2"
                    android:contentDescription="@string/call_image"/>
            <TextView
                    android:text="@string/call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_call_text" android:textAlignment="center"
                    android:textColor="@color/gray_out"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" android:padding="8dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp" app:srcCompat="@drawable/star" android:id="@+id/imageView9"
                    android:tint="@color/colorPrimary" android:layout_weight="2" android:contentDescription="@string/like_restaurant"/>
            <TextView
                    android:text="@string/like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:textColor="@color/colorPrimary" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" android:padding="8dp"
                android:id="@+id/restaurant_detail_website_layout">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp" app:srcCompat="@drawable/web"
                    android:id="@+id/restaurant_detail_website_image"
                    android:tint="@color/gray_out" android:layout_weight="2"
                    android:contentDescription="@string/website_picture"/>
            <TextView
                    android:text="@string/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_website_text"
                    android:textColor="@color/gray_out" android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/workmates_recyclerview_row"
    />

</androidx.constraintlayout.widget.ConstraintLayout>