<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="com.paulleclerc.go4lunch.ui.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LogInActivity">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/background" android:id="@+id/imageView"
                android:scaleType="centerCrop" android:contentDescription="@string/login_background_content_description"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
        <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/fullscreen_view"
                android:background="#2C2C2C" android:alpha="0.5" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/logo_subtitle"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp">

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                    android:id="@+id/sign_in_with_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/sign_in_with_google"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="signInWithGoogle"/>
            <com.facebook.login.widget.LoginButton
                    android:id="@+id/sign_in_with_facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_gravity="center_horizontal"
                    facebook:com_facebook_login_text="@string/sign_in_with_facebook"
                    app:layout_constraintTop_toBottomOf="@id/sign_in_with_google_button"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/go4lunch_logo"
                android:id="@+id/go4lunchLogo"
                android:contentDescription="@string/go4lunch_logo_content_description"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:scaleType="fitEnd"
                app:layout_constraintDimensionRatio="1"
        />
        <TextView
                android:text="@string/logo_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/logo_subtitle"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textColor="#FFFFFF"
                android:textStyle="italic" app:layout_constraintTop_toBottomOf="@+id/go4lunchLogo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>